Sat Jun  8 10:01:11 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* aclocal.m4: Remove WITH_KDB4 and USE_KDB4_LIBRARY support

Fri Jun  7 17:39:45 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (makefile-windows): Use full directory
		name "error_tables" when building under Windows so that
		the build will work correctly under VFAT and NTFS
		filesystems.  Build the "makefile" file so that it
		includes config/win-post.in.
		
Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

	* patchlevel.h (KRB5_MINOR_RELEASE): Update patchlevel for Beta 6 release.

	* Makefile.in (FILES): Include lib/crypto/sha/* in list of files
		to be built for Windows and the Macintosh.
		(makefile-windows): Build lib/crypto/sha/makefile for Windows

Tue Jun  4 12:00:25 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* aclocal.m4 (KRB5_LIBRARIES): Always do USE_ANAME if kdbm_deplib
		is not defined, since in shared library situations we may
		need to resolve all undefined symbols.  (We don't do
		USE_ANAME if kdbm_deplib is defined because the db library
		used for kdb may be different from the one used for the
		aname work.  This is a bit of an ugly botch, but it will
		work for now.)

Wed May 29 18:39:21 1996  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4 (AC_CHECK_DBM_PROTO): sense of arguments to be
		evaluated was reversed

Mon May 20 17:56:15 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* aclocal.m4 (CHECK_DB): Remove vestigal support for ODBM.  

Tue May 14 21:56:08 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* aclocal.m4 (AC_CHECK_DBM_PROTO): Arguments were not executed if
		using cached results.

Tue Apr 30 23:25:07 1996  Ken Raeburn  <raeburn@cygnus.com>

	* Makefile.in (tgz-bin, pkgdir): New targets.
	(PKGDIR, GZIPPROG): New variables.

	* aclocal.m4 (WITH_NETLIB): Don't look for socket lib on Irix.
